css/about.css
html {
  box-sizing: border-box;
  line-height: 1.4;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  background: #fff;
  width: 100%;
  margin: 0;
}

header {
  margin: 0;
}

.rlogo img {
  display: flex;
  align-items: flex-start;
  cursor: pointer;
  width: 4rem;
  margin-left: 6rem;
  margin-top: 1rem;
  position: absolute;
}

nav ul {
  background: #e0e0e2;
  margin: 0;
  padding: 2rem;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  font-family: mundial, sans-serif;
  font-weight: 600;
  font-style: normal;
  font-size: 1.5rem;
}

nav li {
  list-style: none;
  margin-right: 10rem;
}

nav a {
  text-decoration: none;
  color: #721817;
  transition: all 0.3s ease 0s;
}

nav a:hover {
  color: #231f20;
}

.education {
  display: grid;
  grid-gap: 1em;
  grid-template-columns: 49% 34%;
  grid-template-rows: 24% 24%;
  justify-content: center;
  margin-top: 5rem;
  margin-bottom: 4rem;
}

.education img {
    object-fit: cover;
    width: 100%;
    height: 100%;
    object-position: 40% 32%;
    grid-column: 2;
    grid-row: 1/2;
}

main h1 {
  font-family: mendl-sans-dawn, sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #721817;
  margin-bottom: 0;
  font-size: 2.5rem;
  text-align: center;
}

.education h2 {
  font-family: mendl-sans-dawn, sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #721817;
  margin-bottom: 0;
  font-size: 2.5rem;
}

.education p {
  font-family: mundial, sans-serif;
  font-weight: 400;
  font-style: normal;
  color: black;
  margin-top: 0;
  width: 80%;
  font-size: 1.5rem;
  width: 60%;
}

.longimg {
  display: grid;
  grid-template-columns: 49% 34%;
  justify-content: center;
  margin-top: 1rem;
  margin-bottom: 2rem;
}

.longimg img{
  object-fit: cover;
  width: 100%;
  height: 100%;
  object-position: 40% 38%;
  grid-column: 1/3;
}

.exhibitions {
display: grid;
grid-gap: 1em;
grid-template-columns: 38% 44%;
grid-template-rows: 1fr;
justify-content: center;
margin-top: 5rem;
margin-bottom: 4rem;
}

.exhibitions div {
  grid-column: 1/3;
}

.exhibitions h2 {
  font-family: mendl-sans-dawn, sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #721817;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 2.5rem;
  text-align: center;
}

.exhibitions p {
  font-family: mundial, sans-serif;
  font-weight: 400;
  font-style: normal;
  color: black;
  margin-top: 0;
  font-size: 1.5rem;
  text-align: center;
}

.exhibitions img {
  object-fit: cover;
  width: 100%;
  height: 100%;
  object-position: 40% 34%;
}

footer {
  background: #e0e0e2;
  margin: 0;
  padding: 2rem;
  display: flex;
  justify-content: space-around;
  align-items: center;
  font-family: mundial, sans-serif;
  font-weight: 600;
  font-style: normal;
  font-size: 1.5rem;
}

footer a {
  color: #721817;
  text-decoration: none;
  transition: all 0.3s ease 0s;
}

footer a:hover {
  color: #231f20;
}

@media only screen and (min-width: 38em) {

.rlogo img {
    width: 3rem;
}

nav ul {
  font-size: 1rem;
}

nav a {
  margin-right: -72px;
}

